[package]
name = "log_domain"
description = "Logarithmic representation of floats"
repository = "https://github.com/tud-fop/rust-log-domain"
license = "BSD-3-Clause"
version = "0.4.0"
authors = ["Tobias Denkinger <tobias.denkinger@tu-dresden.de>"]

[dependencies]
num-traits = "0.1.41"
serde = "1.0"
